# NetworkingInCpp

./: CMakeLists.txt  README.md  buildscript.sh  main.cpp
Class1_CMake/: CMakeLists.txt
Class1_CMake/inc/: Logger.h
Class1_CMake/src/: Logger.cpp
